Multiple series now representing

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,11 @@
         <h1>Comparables</h1>
         <div id="comparables"></div>
       </div>
-      <div class="col-md-10">
+      <div class="col-md-2">
+        <h1>Comparators</h1>
+        <div id="comparators"></div>
+      </div>
+      <div class="col-md-8">
         <h1>Comparisons</h1>
         <div id="comparisons"></div>
       </div>
