workoing towards pull

--- a/www/index.html
+++ b/www/index.html
@@ -11,22 +11,36 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"></link>
     <link rel="stylesheet" href="css/metricsgraphics.css"></link>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/simalata.css"></link>
     <title>Simalata</title>
   </head>
   <body>
     <div class="container-fluid">
-      <div class="col-md-2">
-        <h1>Comparables</h1>
-        <div id="comparables"></div>
+      <div class="jumbotron">
+        <div class="container">
+          <div class="col-md-3">
+            <img src="/css/images/ion-cannon.png"></img>
+          </div>
+          <div class="col-md-9">
+            <h1>ion-cannon</h1>
+            <div>A Tsung frontend by Stackable Regiments</div>
+          </div>
+        </div>
       </div>
-      <div class="col-md-2">
-        <h1>Comparators</h1>
-        <div id="comparators"></div>
-      </div>
-      <div class="col-md-8">
-        <h1>Comparisons</h1>
-        <div id="comparisons"></div>
+      <div class="container-fluid">
+        <div class="col-md-2">
+          <h3>Comparables</h1>
+          <div id="comparables"></div>
+        </div>
+        <div class="col-md-2">
+          <h3>Comparators</h1>
+          <div id="comparators"></div>
+        </div>
+        <div class="col-md-8">
+          <h3>Comparisons</h1>
+          <div id="comparisons"></div>
+        </div>
       </div>
     </div>
   </body>
